--- a/.gitignore
+++ b/.gitignore
@@ -382,3 +382,6 @@ ASALocalRun/
 healthchecksdb
 appsettings.json
 Models/SIPADEContext.cs
+appsettings.Development.json
+appsettings.json
+Models/SIPADEContext.cs
